seaqt/QtWidgets/gen_qcolordialog.h

class QColor;
class QColorDialog;
class QMetaObject;
class QWidget;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QColor QColor;
typedef struct QColorDialog QColorDialog;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QColorDialog_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QColorDialog_override_virtual_enterEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_enterEvent(void* self, QEvent* event);
bool QColorDialog_override_virtual_leaveEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_leaveEvent(void* self, QEvent* event);
bool QColorDialog_override_virtual_paintEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_paintEvent(void* self, QPaintEvent* event);
bool QColorDialog_override_virtual_moveEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QColorDialog_override_virtual_tabletEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QColorDialog_override_virtual_actionEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QColorDialog_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QColorDialog_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QColorDialog_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QColorDialog_override_virtual_dropEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QColorDialog_override_virtual_hideEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QColorDialog_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QColorDialog_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QColorDialog_override_virtual_metric(void* self, intptr_t slot);
int QColorDialog_virtualbase_metric(const void* self, int param1);
bool QColorDialog_override_virtual_initPainter(void* self, intptr_t slot);
void QColorDialog_virtualbase_initPainter(const void* self, QPainter* painter);
bool QColorDialog_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QColorDialog_virtualbase_redirected(const void* self, QPoint* offset);
bool QColorDialog_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QColorDialog_virtualbase_sharedPainter(const void* self);
bool QColorDialog_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QColorDialog_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QColorDialog_virtualbase_inputMethodQuery(const void* self, int param1);
bool QColorDialog_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QColorDialog_virtualbase_focusNextPrevChild(void* self, bool next);
bool QColorDialog_override_virtual_timerEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QColorDialog_override_virtual_childEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_childEvent(void* self, QChildEvent* event);
bool QColorDialog_override_virtual_customEvent(void* self, intptr_t slot);
void QColorDialog_virtualbase_customEvent(void* self, QEvent* event);
bool QColorDialog_override_virtual_connectNotify(void* self, intptr_t slot);
void QColorDialog_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QColorDialog_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QColorDialog_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QColorDialog_staticMetaObject();
void QColorDialog_delete(QColorDialog* self);