seaqt/QtWidgets/gen_qcolordialog.nim

proc fQColorDialog_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_focusOutEvent".}
proc fcQColorDialog_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_focusOutEvent".}
proc fQColorDialog_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_enterEvent".}
proc fcQColorDialog_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_enterEvent".}
proc fQColorDialog_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_leaveEvent".}
proc fcQColorDialog_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_leaveEvent".}
proc fQColorDialog_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_paintEvent".}
proc fcQColorDialog_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_paintEvent".}
proc fQColorDialog_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_moveEvent".}
proc fcQColorDialog_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_moveEvent".}
proc fQColorDialog_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_tabletEvent".}
proc fcQColorDialog_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_tabletEvent".}
proc fQColorDialog_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_actionEvent".}
proc fcQColorDialog_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_actionEvent".}
proc fQColorDialog_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_dragEnterEvent".}
proc fcQColorDialog_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_dragEnterEvent".}
proc fQColorDialog_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_dragMoveEvent".}
proc fcQColorDialog_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_dragMoveEvent".}
proc fQColorDialog_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_dragLeaveEvent".}
proc fcQColorDialog_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_dragLeaveEvent".}
proc fQColorDialog_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_dropEvent".}
proc fcQColorDialog_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_dropEvent".}
proc fQColorDialog_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_hideEvent".}
proc fcQColorDialog_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_hideEvent".}
proc fQColorDialog_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QColorDialog_virtualbase_nativeEvent".}
proc fcQColorDialog_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_nativeEvent".}
proc fQColorDialog_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QColorDialog_virtualbase_metric".}
proc fcQColorDialog_override_virtual_metric(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_metric".}
proc fQColorDialog_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QColorDialog_virtualbase_initPainter".}
proc fcQColorDialog_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_initPainter".}
proc fQColorDialog_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QColorDialog_virtualbase_redirected".}
proc fcQColorDialog_override_virtual_redirected(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_redirected".}
proc fQColorDialog_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QColorDialog_virtualbase_sharedPainter".}
proc fcQColorDialog_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_sharedPainter".}
proc fQColorDialog_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QColorDialog_virtualbase_inputMethodEvent".}
proc fcQColorDialog_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_inputMethodEvent".}
proc fQColorDialog_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QColorDialog_virtualbase_inputMethodQuery".}
proc fcQColorDialog_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_inputMethodQuery".}
proc fQColorDialog_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QColorDialog_virtualbase_focusNextPrevChild".}
proc fcQColorDialog_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_focusNextPrevChild".}
proc fQColorDialog_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_timerEvent".}
proc fcQColorDialog_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_timerEvent".}
proc fQColorDialog_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_childEvent".}
proc fcQColorDialog_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_childEvent".}
proc fQColorDialog_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QColorDialog_virtualbase_customEvent".}
proc fcQColorDialog_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_customEvent".}
proc fQColorDialog_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QColorDialog_virtualbase_connectNotify".}
proc fcQColorDialog_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_connectNotify".}
proc fQColorDialog_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QColorDialog_virtualbase_disconnectNotify".}
proc fcQColorDialog_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QColorDialog_override_virtual_disconnectNotify".}
proc fcQColorDialog_staticMetaObject(): pointer {.importc: "QColorDialog_staticMetaObject".}
proc fcQColorDialog_delete(self: pointer) {.importc: "QColorDialog_delete".}


func init*(T: type gen_qcolordialog_types.QColorDialog, h: ptr cQColorDialog): gen_qcolordialog_types.QColorDialog =
  T(h: h)
proc create*(T: type gen_qcolordialog_types.QColorDialog, parent: gen_qwidget_types.QWidget): gen_qcolordialog_types.QColorDialog =
  gen_qcolordialog_types.QColorDialog.init(fcQColorDialog_new(parent.h))

proc create*(T: type gen_qcolordialog_types.QColorDialog, ): gen_qcolordialog_types.QColorDialog =
  gen_qcolordialog_types.QColorDialog.init(fcQColorDialog_new2())

proc create*(T: type gen_qcolordialog_types.QColorDialog, initial: gen_qcolor_types.QColor): gen_qcolordialog_types.QColorDialog =
  gen_qcolordialog_types.QColorDialog.init(fcQColorDialog_new3(initial.h))

proc create*(T: type gen_qcolordialog_types.QColorDialog, initial: gen_qcolor_types.QColor, parent: gen_qwidget_types.QWidget): gen_qcolordialog_types.QColorDialog =
  gen_qcolordialog_types.QColorDialog.init(fcQColorDialog_new4(initial.h, parent.h))

proc metaObject*(self: gen_qcolordialog_types.QColorDialog, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQColorDialog_metaObject(self.h))

proc metacast*(self: gen_qcolordialog_types.QColorDialog, param1: cstring): pointer =
  fcQColorDialog_metacast(self.h, param1)

proc metacall*(self: gen_qcolordialog_types.QColorDialog, param1: cint, param2: cint, param3: pointer): cint =
  fcQColorDialog_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qcolordialog_types.QColorDialog, s: cstring): string =
  let v_ms = fcQColorDialog_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qcolordialog_types.QColorDialog, s: cstring): string =
  let v_ms = fcQColorDialog_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setCurrentColor*(self: gen_qcolordialog_types.QColorDialog, color: gen_qcolor_types.QColor): void =
  fcQColorDialog_setCurrentColor(self.h, color.h)

proc currentColor*(self: gen_qcolordialog_types.QColorDialog, ): gen_qcolor_types.QColor =
  gen_qcolor_types.QColor(h: fcQColorDialog_currentColor(self.h))

proc selectedColor*(self: gen_qcolordialog_types.QColorDialog, ): gen_qcolor_types.QColor =
  gen_qcolor_types.QColor(h: fcQColorDialog_selectedColor(self.h))

proc setOption*(self: gen_qcolordialog_types.QColorDialog, option: cint): void =
  fcQColorDialog_setOption(self.h, cint(option))

proc testOption*(self: gen_qcolordialog_types.QColorDialog, option: cint): bool =
  fcQColorDialog_testOption(self.h, cint(option))

proc setOptions*(self: gen_qcolordialog_types.QColorDialog, options: cint): void =
  fcQColorDialog_setOptions(self.h, cint(options))

proc options*(self: gen_qcolordialog_types.QColorDialog, ): cint =
  cint(fcQColorDialog_options(self.h))

proc setVisible*(self: gen_qcolordialog_types.QColorDialog, visible: bool): void =
  fcQColorDialog_setVisible(self.h, visible)

proc getColor*(_: type gen_qcolordialog_types.QColorDialog, ): gen_qcolor_types.QColor =
  gen_qcolor_types.QColor(h: fcQColorDialog_getColor())

proc getRgba*(_: type gen_qcolordialog_types.QColorDialog, ): cuint =
  fcQColorDialog_getRgba()

proc customCount*(_: type gen_qcolordialog_types.QColorDialog, ): cint =
  fcQColorDialog_customCount()

proc customColor*(_: type gen_qcolordialog_types.QColorDialog, index: cint): gen_qcolor_types.QColor =
  gen_qcolor_types.QColor(h: fcQColorDialog_customColor(index))

proc setCustomColor*(_: type gen_qcolordialog_types.QColorDialog, index: cint, color: gen_qcolor_types.QColor): void =
  fcQColorDialog_setCustomColor(index, color.h)

proc standardColor*(_: type gen_qcolordialog_types.QColorDialog, index: cint): gen_qcolor_types.QColor =
  gen_qcolor_types.QColor(h: fcQColorDialog_standardColor(index))

proc setStandardColor*(_: type gen_qcolordialog_types.QColorDialog, index: cint, color: gen_qcolor_types.QColor): void =
  fcQColorDialog_setStandardColor(index, color.h)

proc currentColorChanged*(self: gen_qcolordialog_types.QColorDialog, color: gen_qcolor_types.QColor): void =
  fcQColorDialog_currentColorChanged(self.h, color.h)

type QColorDialogcurrentColorChangedSlot* = proc(color: gen_qcolor_types.QColor)
proc miqt_exec_callback_QColorDialog_currentColorChanged(slot: int, color: pointer) {.exportc.} =
  let nimfunc = cast[ptr QColorDialogcurrentColorChangedSlot](cast[pointer](slot))
  let slotval1 = gen_qcolor_types.QColor(h: color)

  nimfunc[](slotval1)

proc oncurrentColorChanged*(self: gen_qcolordialog_types.QColorDialog, slot: QColorDialogcurrentColorChangedSlot) =
  var tmp = new QColorDialogcurrentColorChangedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQColorDialog_connect_currentColorChanged(self.h, cast[int](addr tmp[]))

proc colorSelected*(self: gen_qcolordialog_types.QColorDialog, color: gen_qcolor_types.QColor): void =
  fcQColorDialog_colorSelected(self.h, color.h)
